# ChangeLog for dev-java/spin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/spin/ChangeLog,v 1.19 2014/08/10 20:24:10 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> spin-1.5.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  13 Nov 2007; Christian Faulhammer <opfer@gentoo.org> spin-1.5.ebuild:
  filtered jikes

  24 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org> -spin-1.3.1.ebuild:
  Removed java gen 1 ebuild

  24 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> spin-1.5.ebuild:
  ppc stable, bug #189381

  22 Aug 2007; Christian Faulhammer <opfer@gentoo.org> spin-1.5.ebuild:
  stable x86, bug 189381

  21 Aug 2007; William L. Thomson Jr. <wltjr@gentoo.org> spin-1.5.ebuild:
  amd64 stable, bug #189381.

  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> spin-1.5.ebuild:
  Added ~ppc, bug #176033

  15 May 2007; Alistair John Bush <ali_bush@gentoo.org> spin-1.5.ebuild:
  Fixed issue with installing javadoc

  25 Apr 2007; Vlastimil Babka <caster@gentoo.org> spin-1.5.ebuild:
  Fix cglib dependency to 2.1 slot, bug #176033 by Colin Macdonald
  <cbm@sfu.ca>. Need to drop ~ppc because of it.

*spin-1.5 (20 Apr 2007)

  20 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> +files/1.5-build.xml,
  +files/1.5-maven-build.properties, +spin-1.5.ebuild:
  Version bump. Uses generation 2 eclasses and build.xml generated from pom.xml.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> spin-1.3.1.ebuild:
  Dropping sparc keywords, see #96229

  06 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> spin-1.3.1.ebuild:
  Stable on sparc

  05 May 2005; Jan Brinkmann <luckyduck@gentoo.org> spin-1.3.1.ebuild:
  stable on amd64, ppc and x86

  03 Apr 2005; <SeJo@gentoo.org> spin-1.3.1.ebuild:
  added ~ppc keyword

  29 Mar 2005; Gustavo Zacarias <gustavoz@gentoo.org> spin-1.3.1.ebuild: