@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/spin
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/spin/ChangeLog,v 1.19 2014/08/10 20:24:10 slyfox Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/spin/ChangeLog,v 1.20 2015/04/14 19:50:22 monsieurp Exp $
+
+*spin-1.5-r1 (14 Apr 2015)
+
+  14 Apr 2015; Patrice Clement <monsieurp@gentoo.org> +spin-1.5-r1.ebuild:
+  SLOT bump wrt bug 546288. Drop ppc keywords.
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> spin-1.5.ebuild:
   QA: drop trailing '.' from DESCRIPTION
